--- a/MyThirdProject/MyThirdProject.csproj
+++ b/MyThirdProject/MyThirdProject.csproj
@@ -67,12 +67,17 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Content Include="Shared\_Layout.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="Shared\style.css" />
+    <Content Include="WebPage2.cshtml" />
+    <Content Include="WebPage3.cshtml" />
+    <Content Include="WebPage4.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.config" />
